# curry-base

./: .gitignore  CHANGELOG.md  TODO  curry-base.cabal  overview.md  uebersicht.md
Curry/: AbstractCurry.hs
Curry/Base/: Ident.lhs  MessageMonad.hs
Curry/ExtendedFlat/: EraseTypes.hs  Goodies.hs  LiftLetrec.hs  MonadicGoodies.hs  Type.hs  TypeInference.hs  UnMutual.hs
Curry/Files/: Filenames.hs  PathUtils.hs
Curry/FlatCurry/: Goodies.hs  Tools.hs  Type.hs
src/Curry/: AbstractCurry.hs  ExtendedFlat.hs  FlatCurry.hs  Syntax.hs
src/Curry/AbstractCurry/: Files.hs  Type.hs
src/Curry/Base/: Equiv.hs  Expr.hs  Ident.hs  Ident.lhs  LLParseComb.hs  LLParseComb.lhs  LexComb.hs  LexComb.lhs  Message.hs  MessageMonad.hs  Monad.hs  Position.hs  Position.lhs  Pretty.hs  Span.hs
src/Curry/ExtendedFlat/: CurryArithmetics.hs  Equality.hs  Goodies.hs  InterfaceEquality.hs  InterfaceEquivalence.hs  LiftLetrec.hs  MonadicGoodies.hs  Pretty.hs  Type.hs  TypeInference.hs  UnMutual.hs
src/Curry/Files/: Filenames.hs  PathUtils.hs  Unlit.hs
src/Curry/FlatCurry/: Files.hs  Goodies.hs  Pretty.hs  Tools.hs  Type.hs
src/Curry/Syntax/: Extension.hs  InterfaceEquivalence.hs  Lexer.hs  Parser.hs  Parser.lhs  Pretty.hs  Pretty.lhs  ShowModule.hs  Type.hs  Type.lhs  Utils.hs
test/: HaskellRecords.curry  Pragmas.curry  TestBase.hs
test/Parser/: Classes.curry  Contexts.curry  Contexts.hs  DataDeclContexts.curry  Deriving.curry  ExplicitTypes.curry  Instances.curry  Prelude.fint  Prelude.icurry  TypeSignature.curry  TypeSignature.hs
test/Parser/errors/: TypeSignature.curry  typeExps.curry
util/: canonfint.hs  lex.hs  parse.hs
