Name:          curry-base
Version:       0.3.1
Cabal-Version: >= 1.6
Synopsis:      Functions for manipulating Curry programs
Description:   This package serves as a foundation for Curry compilers.
               It defines the intermediate language formats FlatCurry and
               ExtendedFlat. Additionally, it provides functionality
               for the smooth integration of compiler frontends and backends.
Category:      Language
License:       OtherLicense
License-File:  LICENSE
Author:        Wolfgang Lux, Martin Engelke, Bernd Braßel, Holger Siegel,
               Björn Peemöller
Maintainer:    bjp@informatik.uni-kiel.de
Homepage:      http://curry-language.org
Build-Type:    Simple
Stability:     experimental

Flag split-syb
  Description: Has the syb functionality been split into the package syb?
  Default:     True

Flag new-time
  Description: Does the directory package use the new time implementation?
  Default:     True

Library
  hs-source-dirs: src
  if flag(split-syb)
    Build-Depends: base == 4.*, syb
  else
    Build-Depends: base == 3.*
  if flag(new-time)
    Build-Depends: time, directory >= 1.2
  else
    Build-Depends: old-time, directory < 1.2
  Build-Depends:
      mtl
    , containers
    , filepath
    , pretty
  ghc-options: -Wall
  Exposed-Modules:
    Curry.AbstractCurry
    Curry.Base.Ident
    Curry.Base.LexComb
    Curry.Base.LLParseComb
    Curry.Base.Message
    Curry.Base.Position
    Curry.ExtendedFlat.CurryArithmetics
    Curry.ExtendedFlat.EraseTypes
    Curry.ExtendedFlat.Goodies
    Curry.ExtendedFlat.InterfaceEquality
    Curry.ExtendedFlat.LiftLetrec
    Curry.ExtendedFlat.MonadicGoodies
    Curry.ExtendedFlat.Type
    Curry.ExtendedFlat.TypeInference
    Curry.ExtendedFlat.UnMutual
    Curry.FlatCurry.Goodies
    Curry.FlatCurry.Pretty
    Curry.FlatCurry.Type
    Curry.Files.Filenames
    Curry.Files.PathUtils
    Curry.Files.Unlit
    Curry.Syntax
    Curry.Syntax.Lexer
    Curry.Syntax.Parser
    Curry.Syntax.Pretty
    Curry.Syntax.ShowModule
    Curry.Syntax.Type
    Curry.Syntax.Utils
